CH3/programming_projects/listing_tasks/mk_out
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c: In function ‘dfs’:
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:31:2: error: unknown type name ‘list_head’
  list_head *list; 
  ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:31:2: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:32:2: error: unknown type name ‘task_struct’
  task_struct *task; 
  ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:34:2: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
  for (size_t i = 0; i < curr_level; i++)
  ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:34:2: note: use option -std=c99, -std=gnu99, -std=c11 or -std=gnu11 to compile your code
In file included from include/linux/module.h:9:0,
                 from /home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:2:
include/linux/list.h:409:11: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
  for (pos = (head)->next; pos != (head); pos = pos->next)
           ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:38:2: note: in expansion of macro ‘list_for_each’
  list_for_each(list, &curr->children) {
  ^
include/linux/list.h:409:31: warning: comparison of distinct pointer types lacks a cast
  for (pos = (head)->next; pos != (head); pos = pos->next)
                               ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:38:2: note: in expansion of macro ‘list_for_each’
  list_for_each(list, &curr->children) {
  ^
include/linux/list.h:409:51: error: request for member ‘next’ in something not a structure or union
  for (pos = (head)->next; pos != (head); pos = pos->next)
                                                   ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:38:2: note: in expansion of macro ‘list_for_each’
  list_for_each(list, &curr->children) {
  ^
In file included from include/linux/list.h:8:0,
                 from include/linux/module.h:9,
                 from /home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:2:
include/linux/kernel.h:815:48: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
  const typeof( ((type *)0)->member ) *__mptr = (ptr); \
                                                ^
include/linux/list.h:352:2: note: in expansion of macro ‘container_of’
  container_of(ptr, type, member)
  ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:39:10: note: in expansion of macro ‘list_entry’
   task = list_entry(list, struct task_struct, sibling);
          ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:39:8: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
   task = list_entry(list, struct task_struct, sibling);
        ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:40:7: warning: passing argument 1 of ‘dfs’ from incompatible pointer type [-Wincompatible-pointer-types]
   dfs(task, curr_level + 1);
       ^
/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.c:23:13: note: expected ‘struct task_struct *’ but argument is of type ‘int *’
 static void dfs(struct task_struct *curr, size_t curr_level) 
             ^
make[2]: *** [/home/osc/OSC/CH3/programming_projects/listing_tasks/dfs.o] Error 1
make[1]: *** [_module_/home/osc/OSC/CH3/programming_projects/listing_tasks] Error 2
make: *** [all] Error 2
